--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,15 @@
     "lint": "echo 'No linter configured yet'"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "@prisma/client": "^5.22.0",
+    "cors": "^2.8.6",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.14",
     "supertest": "^6.3.4"
   }
 }
